--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-     "seed": "node scripts/seedDB.js",
+    "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
@@ -31,12 +31,14 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "if-env": "^1.0.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.5",
     "morgan": "^1.9.1",
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-moment": "^0.9.2"
   },
   "devDependencies": {
     "colors": "^1.3.3",
