--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/evanejtucker/react-auth.git"
+    "url": "git+https://github.com/amitsinghgh19/dreamteampro3.git"
   },
   "keywords": [],
-  "author": "Evan E J Tucker",
+  "author": "Amit Singh",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/evanejtucker/react-auth/issues"
+    "url": "https://github.com/amitsinghgh19/dreamteampro3/issues"
   },
-  "homepage": "https://github.com/evanejtucker/react-auth#readme",
+  "homepage": "https://github.com/amitsinghgh19/dreamteampro3#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "colors": "^1.3.3",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "if-env": "^1.0.4",
