--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-auth",
+  "name": "mern-project3",
   "version": "1.0.0",
-  "description": "react app with passport auth",
+  "description": "mern app with passport auth",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "colors": "^1.3.3",
-    "concurrently": "^4.1.0",
+    "concurrently": "^4.1.1",
     "nodemon": "^1.18.9"
   },
   "engines": {
