--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "react-moment": "^0.9.2"
+    "react-moment": "^0.9.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "colors": "^1.3.3",
