--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react-moment": "^0.9.2",
+    "twilio": "^3.33.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
