--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/amitsinghgh19/dreamteampro3#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "colors": "^1.3.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
