--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react-moment": "^0.9.2",
+    "square-connect": "^2.20190724.0",
+    "stripe": "^7.8.0",
     "twilio": "^3.33.3",
     "uuid": "^3.3.2"
   },
