--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "react-html5-camera-photo": "^1.4.3",
     "react-moment": "^0.9.2",
+    "react-qr-reader": "^2.2.1",
     "square-connect": "^2.20190724.0",
     "stripe": "^7.8.0",
     "twilio": "^3.33.3",
