--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-qr-reader": "^2.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "reactstrap": "^7.1.0"
+    "reactstrap": "^7.1.0",
+    "qrcode.react": "^0.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
