--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "qrcode.react": "^0.9.3",
     "react-html5-camera-photo": "^1.4.3",
     "react-moment": "^0.9.2",
     "react-qr-reader": "^2.2.1",
