--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,14 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "node-sass": "^4.11.0",
+    "qrcode.react": "^0.9.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-qr-reader": "^2.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "reactstrap": "^7.1.0",
-    "qrcode.react": "^0.9.3"
+    "twilio": "^3.33.3"
   },
   "scripts": {
     "start": "react-scripts start",
