--- a/package.json
+++ b/package.json
@@ -31,15 +31,18 @@
     "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-pino-logger": "^4.0.0",
     "express-session": "^1.15.6",
     "if-env": "^1.0.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.5",
     "morgan": "^1.9.1",
     "nodemailer": "^5.1.1",
+    "npm-run-all": "^4.1.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "pino-colada": "^1.4.5",
     "qrcode.react": "^0.9.3",
     "react-html5-camera-photo": "^1.4.3",
     "react-moment": "^0.9.2",
@@ -52,7 +55,7 @@
   "devDependencies": {
     "colors": "^1.3.3",
     "concurrently": "^4.1.1",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.19.1"
   },
   "engines": {
     "node": "^8.11.4"
