--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.8.0",
     "colors": "^1.3.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
@@ -44,6 +45,7 @@
     "path": "^0.12.7",
     "pino-colada": "^1.4.5",
     "qrcode.react": "^0.9.3",
+    "react-chartjs-2": "^2.7.6",
     "react-html5-camera-photo": "^1.4.3",
     "react-moment": "^0.9.2",
     "react-qr-reader": "^2.2.1",
