--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "node-sass": "^4.11.0",
     "qrcode.react": "^0.9.3",
     "react": "^16.7.0",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.7.0",
-    "react-qr-reader": "^2.1.1",
+    "react-html5-camera-photo": "^1.4.3",
+    "react-moment": "^0.9.2",
+    "react-qr-reader": "^2.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "reactstrap": "^7.1.0",
