--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "google-maps-react": "^2.0.2",
     "if-env": "^1.0.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.5",
