--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "reactstrap": "^7.1.0",
-    "twilio": "^3.33.3"
+    "twilio": "^3.33.3",
+    "moonmoji": "^1.1.10",
+    "the-moon": "^1.1.0",
+    "react-spinners": "^0.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
